--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/JINJ95/Burgers/issues"
   },
-  "homepage": "https://github.com/JINJ95/Burgers#readme"
+  "homepage": "https://github.com/JINJ95/Burgers#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
+    "mysql": "^2.18.1"
+  }
 }
